2009-09-19  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h (__USE_MINGW_ANSI_STDIO): If not explicitly defined by the
	user, but when any of the _POSIX, __STRICT_ANSI__, _ISOC99_SOURCE,
	_POSIX_SOURCE, _POSIX_C_SOURCE, _XOPEN_SOURCE, _XOPEN_SOURCE_EXTENDED,
	_GNU_SOURCE, _BSD_SOURCE or _SVID_SOURCE macros is defined, assume that
	ANSI I/O standards are preferred over Microsoft's and define it as 1.
	With this we now mimic mingw.org behavior.

	* _mingw.h: Made the __forceinline definition to mirror the FORCEINLINE
	definition in winnt.h

2009-09-18  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h, io.h, rpcndr.h, strsafe.h. time.h, vadefs.h:  Now that the
	__MINGW_EXTENSION macro is in effect, remove the gcc-specific typedefs
	using machine modes for strict ansi cases and 64 bit scalars.

	* wctype.h: Added the missing __cplusplus guard around wchar_t typedef.

2009-09-18  Kai Tietz  <kai.tietz@onevision.com>

        * Implement time_t related functions by stubs in libmingwex.a and do
        export them in .def as DATA. So just the imp_<name> is present and we
        avoid collisions in names. Reasoned is this patch by dlltool's inability
        to alias symbols.

2009-09-18  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw_print_pop.h:  Fixed compilation when __USE_MINGW_ANSI_STDIO is defined,
	but not to a specific value.
	* _mingw_print_push.h: Likewise.

2009-09-17  Kai Tietz  <kai.tietz@onevision.com>

        * time.h, wchar.h, tchar.h: Add for time specific function the _<name>32 version
	to headers and use them in inline version.

2009-09-15  Kai Tietz  <kai.tietz@onevision.com>

        * time.h: Use of _localtime32, _gmtime32, and _mkgmtime32.

2009-09-11  Kai Tietz  <kai.tietz@onevision.com>

	* winnt.h (FORCEINLINE): Add __attribute__((always_inline)) to
	it and remove static.

2009-09-11  Ozkan Sezer  <sezeroz@gmail.com>

	* time.h (gmtime_r): Fixed a long standing nasty typo in macro.
	(localtime_r): Likewise.

2009-09-09  Ozkan Sezer  <sezeroz@gmail.com>